# qts2d

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  index.html  objects.inv
docs/contributing/: index.html
docs/examples/: index.html
docs/installation/: index.html
docs/license/: index.html
docs/overview/: index.html
docs/qgaf/: index.html
docs/qmtf/: index.html
docs/qrp/: index.html
docs/qsg/: index.html
docs/references/: index.html
docs/transformers/: index.html
examples/: qgaf_example.py  qmtf_example.py  qrp_example.py  qsg_example.py
qts2d/: __init__.py  base_transformer.py
qts2d/encoding/: __init__.py  qgaf.py  qmtf.py  qrp.py  qsg.py
qts2d/encoding/tests/: __init__.py  test_qgaf.py  test_qmtf.py  test_qrp.py  test_qsg.py
qts2d/tests/: test_base_transformer.py
qts2d/utils/: __init__.py  preprocessing.py
